<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="producto"
            type="com.example.ej11.MainActivity.Producto" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="415dp"
            android:layout_height="22dp"
            android:background="#606060"
            android:text="@string/titulo"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_lista"
            android:layout_width="408dp"
            android:layout_height="24dp"
            android:text="@string/lista"
            app:layout_constraintBottom_toTopOf="@+id/lv_listaCompra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

        <ListView
            android:id="@+id/lv_listaCompra"
            android:layout_width="wrap_content"
            android:layout_height="191dp"
            android:choiceMode="singleChoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lista" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="416dp"
            android:layout_height="20dp"
            android:text="@string/nombre"
            app:layout_constraintBottom_toTopOf="@+id/til_nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lv_listaCompra"
            tools:layout_editor_absoluteY="247dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_precio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n"
                android:text="@{producto.descripcion}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_precio"
            android:layout_width="407dp"
            android:layout_height="20dp"
            android:text="@string/precio"
            app:layout_constraintBottom_toTopOf="@+id/til_precio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_nombre" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_precio"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_precio"
            tools:layout_editor_absoluteY="523dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_et_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p"
                android:text="@{String.valueOf(producto.precio)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btAñadir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_precio" />

        <Button
            android:id="@+id/btBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btBorrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btAdd" />

        <Button
            android:id="@+id/btView"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:text="@string/btView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btBorrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>